tests/fails/error_for_invalid_list.rs
use dynamodb_helper::DynamoDb;

#[derive(DynamoDb)]
pub struct Example {
    #[partition]
    first: String,
    second: u32,
    invalid: Vec<bool>,
}

fn main() {}
